--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,8 @@
 ::after,
 ::before {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  padding: 0; 
+  box-sizing: border-box; 
 }
 
 html {
@@ -90,6 +90,8 @@ body {
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   line-height: 1;
+  margin: 0;
+
 }
 p {
   margin: 0;
